# zaif-api-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: .main.rs.rustfmt  builder.rs  client.rs  error.rs  lib.rs  main.rs
src/core/: access_key.rs  api.rs  mod.rs
src/public_api/: currencies.rs  currency_pairs.rs  depth.rs  last_price.rs  mod.rs  ticker.rs  trades.rs
src/trade_api/: active_orders.rs  cancel_order.rs  get_id_info.rs  get_info2.rs  get_personal_info.rs  mod.rs  trade.rs  trade_history.rs
