[package]
name = "zaif-api"
version = "0.1.1"
authors = ["yajamon <yajamon.tatsuki@gmail.com>"]

license = "MIT"
repository = "https://github.com/yajamon/zaif-api-rust.git"
description = "Zaif API Wrapper"
keywords = ["zaif", "wrapper"]

exclude = [
    "src/main.rs"
]

[dependencies]
reqwest = "0.8.2"
hyper-tls = "0.1.2"
chrono = "0.4"
openssl = "0.9"
