[package]
name = "zaif-api"
version = "0.5.0"
authors = ["yajamon <yajamon.tatsuki@gmail.com>"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/yajamon/zaif-api-rust.git"
description = "Zaif API Wrapper"
keywords = ["zaif", "api", "wrapper"]

exclude = [
    "src/main.rs"
]

[dependencies]
reqwest = "0.8.2"
hyper-tls = "0.1.2"
chrono = "0.4"
openssl = "0.9"
serde_json = "1.0.8"
serde = "1.0"
serde_derive = "1.0"
